# llm_resource_tally

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __main__.py  install.sh  llm_resource_tally.py  pyproject.toml  resource_tally.py
.claude/: settings.json
.github/workflows/: pr-ledger.yml  test.yml
.llm_resource_tally/: .gitattributes  badge.json  lifetime-totals.json  lifetime-totals.yaml  resource-ledger.jsonl  settings.json
.llm_resource_tally/ledger/: ledger.jsonl
.llm_resource_tally/tool/: .gitignore  __init__.py  __main__.py  _util.py  claims.py  cli.py  config.py  doctor.py  estimate.py  gitutil.py  install.py  ledger.py  modeling_bridge.py  record.py  report.py  schema.py  storage.py  vendoring.py  version.py  wiring_agents.py  wiring_common.py  wiring_git.py  zipapp_artifact.py
.llm_resource_tally/tool/assumptions/: default-pack.json
.llm_resource_tally/tool/backends/: __init__.py  base.py  claude.py  claude_hook.py  codex.py  opencode.py
.llm_resource_tally/tool/hooks/: post-commit
.llm_resource_tally/tool/modeling/: __init__.py  estimate.py  mitigation.py
.llm_resource_tally/tool/modeling/assumptions/: default-pack.json  grid-codecarbon.json
dev/: build_grid_pack.py
dev/llm_resource_tally/: README.md  __main__.py  install.sh  llm_resource_tally.py  rollup.py  version.py
dev/llm_resource_tally/data/: lifetime-totals.yaml  resource-ledger.jsonl
dev/planning/: fable-plan-2026-07-04.md
dev/resource_tally/: README.md  install.sh
dev/resource_tally/hooks/: post-commit
docs/: attribution.md  backends.md  backfill.md  carbon-credits-and-removal.md  challenges-and-roadmap.md  data-model.md  development.md  install.md  mission-and-method.md  modeling.md  related-work.md  schema-spec.md  storage.md
hooks/: post-commit
llm_resource_tally/: __init__.py  claims.py  cli.py  doctor.py  fleet.py  install.py  ledger.py  modeling_bridge.py  report.py  rollup.py  storage.py  vendoring.py  version.py  wiring_agents.py  wiring_claude.py  wiring_git.py
llm_resource_tally/backends/: __init__.py  base.py  claude.py  claude_hook.py  codex.py
llm_resource_tally/modeling/: __init__.py  interval.py  mitigation.py
llm_resource_tally/modeling/assumptions/: generic-wide-pack.json  mitigation-scenarios.json
tests/: test_consolidated_features.py  test_e2e.py  test_installation_policy.py  test_zipapp.py
